fix scrollbar jitter issue; endspace trim

--- a/style.css
+++ b/style.css
@@ -13,8 +13,6 @@ body {
     user-select:none;
     margin-left: auto;
     margin-right: auto;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
 }
 
 img {
@@ -159,10 +157,7 @@ a:active {
 }
 @media print { a, a:link, a:visited, a:focus { color: #515151; } }
 
-#endspace { height: 100vh; }
-::-webkit-scrollbar {
-    display: none;
-}
+#endspace { height: calc(100vh - 87px); }
 
 
 
